--- a/assets/notebooks/customer-churn-prediction.ipynb
+++ b/assets/notebooks/customer-churn-prediction.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current branch     : optimize-churn-model\n",
+      "Current branch     : dev\n",
       "Current environment: dev\n"
      ]
     }
@@ -1029,12 +1029,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.98      0.93      0.96       168\n",
-      "         1.0       0.91      0.97      0.94       115\n",
+      "         0.0       0.98      0.95      0.97       168\n",
+      "         1.0       0.93      0.97      0.95       115\n",
       "\n",
-      "    accuracy                           0.95       283\n",
-      "   macro avg       0.95      0.95      0.95       283\n",
-      "weighted avg       0.95      0.95      0.95       283\n",
+      "    accuracy                           0.96       283\n",
+      "   macro avg       0.96      0.96      0.96       283\n",
+      "weighted avg       0.96      0.96      0.96       283\n",
       "\n"
      ]
     }
@@ -1333,7 +1333,7 @@
      "text": [
       "------------------------------------  --------------  ------------------------  ----------------\n",
       "ID                                    NAME            CREATED                   TYPE\n",
-      "bd253293-c097-4c13-82d4-6e4a7b82aacb  churn_pipeline  2022-09-13T15:19:45.002Z  scikit-learn_1.0\n",
+      "5e89cbcd-66d9-4d1b-95a9-742fa5b9d3c7  churn_pipeline  2022-09-13T15:33:21.002Z  scikit-learn_1.0\n",
       "------------------------------------  --------------  ------------------------  ----------------\n"
      ]
     }
@@ -1376,13 +1376,13 @@
        "     'type': 'DataFrame'},\n",
        "    'type': 'fs'}],\n",
        "  'type': 'scikit-learn_1.0'},\n",
-       " 'metadata': {'created_at': '2022-09-13T15:19:45.738Z',\n",
-       "  'id': 'bd253293-c097-4c13-82d4-6e4a7b82aacb',\n",
-       "  'modified_at': '2022-09-13T15:19:52.650Z',\n",
+       " 'metadata': {'created_at': '2022-09-13T15:33:21.809Z',\n",
+       "  'id': '5e89cbcd-66d9-4d1b-95a9-742fa5b9d3c7',\n",
+       "  'modified_at': '2022-09-13T15:33:26.184Z',\n",
        "  'name': 'churn_pipeline',\n",
-       "  'owner': '1000331019',\n",
-       "  'resource_key': 'e910055b-6456-42ed-a443-b1e0017840f4',\n",
-       "  'space_id': '352230c6-5366-4efb-a278-3ae0e1c481ad'},\n",
+       "  'owner': '1000331020',\n",
+       "  'resource_key': 'd1662897-0b64-47d3-8b40-ce062fc41df8',\n",
+       "  'space_id': '42ab1f95-9fa4-43a4-a3ed-dccdbd00f19a'},\n",
        " 'system': {'warnings': []}}"
       ]
      },
@@ -1412,19 +1412,19 @@
       "\n",
       "#######################################################################################\n",
       "\n",
-      "Synchronous deployment creation for uid: 'bd253293-c097-4c13-82d4-6e4a7b82aacb' started\n",
+      "Synchronous deployment creation for uid: '5e89cbcd-66d9-4d1b-95a9-742fa5b9d3c7' started\n",
       "\n",
       "#######################################################################################\n",
       "\n",
       "\n",
       "initializing\n",
       "Note: online_url is deprecated and will be removed in a future release. Use serving_urls instead.\n",
-      "...\n",
+      "\n",
       "ready\n",
       "\n",
       "\n",
       "------------------------------------------------------------------------------------------------\n",
-      "Successfully finished deployment creation, deployment_uid='8f2e9032-426b-4efe-aafe-9f9d90fac0ba'\n",
+      "Successfully finished deployment creation, deployment_uid='69fd89fb-7905-4ca1-a70d-eaef689be33d'\n",
       "------------------------------------------------------------------------------------------------\n",
       "\n",
       "\n"
@@ -1454,7 +1454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://internal-nginx-svc.cpd-instance.svc.cluster.local:12443/ml/v4/deployments/8f2e9032-426b-4efe-aafe-9f9d90fac0ba/predictions\n"
+      "https://internal-nginx-svc.cpd-instance.svc.cluster.local:12443/ml/v4/deployments/69fd89fb-7905-4ca1-a70d-eaef689be33d/predictions\n"
      ]
     }
    ],
@@ -1535,11 +1535,11 @@
      "text": [
       "------------------------------------  --------------  ------------------------  ----------------\n",
       "ID                                    NAME            CREATED                   TYPE\n",
-      "bd253293-c097-4c13-82d4-6e4a7b82aacb  churn_pipeline  2022-09-13T15:19:45.002Z  scikit-learn_1.0\n",
+      "5e89cbcd-66d9-4d1b-95a9-742fa5b9d3c7  churn_pipeline  2022-09-13T15:33:21.002Z  scikit-learn_1.0\n",
       "------------------------------------  --------------  ------------------------  ----------------\n",
       "------------------------------------  -------------------------  -----  ------------------------\n",
       "GUID                                  NAME                       STATE  CREATED\n",
-      "8f2e9032-426b-4efe-aafe-9f9d90fac0ba  churn_pipeline_deployment  ready  2022-09-13T15:19:57.045Z\n",
+      "69fd89fb-7905-4ca1-a70d-eaef689be33d  churn_pipeline_deployment  ready  2022-09-13T15:33:28.267Z\n",
       "------------------------------------  -------------------------  -----  ------------------------\n"
      ]
     }
